History of Products.minaraad
============================

2.2.0 (unreleased)
------------------

- Added relatedDocuments field to Advisories, where you can select
  published Pages and Files from the 'digibib-1/dossiers-adviezen'
  path.  [maurits]

- Allow workflow transition between the restricted and published state
  and the other way around.  [maurits]

- Added 'Mijn abonnementen' action to personal portlet.  [maurits+simon]

- Made undo action invisible in portal_undo.  [maurits+simon]

- Added styling to the personal tools portlet.  Added 'My account' as
  portlet title. [simon+maurits]

- Added styling to hearing subscribe/unsubscribe. [simon+maurits]


2.1.7 (4 August 2008)
---------------------

- Changed heading for changed members as they are not always of the
  last month.  [maurits]


2.1.6 (4 August 2008)
---------------------

- Added form in minaraad_service for showing a list of changed
  members.  [maurits]

- Added minaraad_service to the control panel.  [maurits]

- Added some sample code from a zopectl debug session for returning a
  list of members that have (recently) been modified.  Minaraad may
  want that so I will include it here.  See
  browser/service.py:modified_members
  [maurits]

- Removed directory sync and file BeautifulSoup.py as they were only
  for the import of users, which was handled a few years ago.
  [maurits]


2.1.5 (8 July 2008)
-------------------

- You can apparently come on the subscriptions form sometimes without
  being logged in.  Do not show the form in that case but show a link
  to the login form.
  [maurits]


2.1.4 (8 July 2008)
-------------------

- Final change to text after all duplicates have been removed.
  [maurits]


2.1.3 (8 July 2008)
-------------------

- After resetting the password, also redirect to the duplicate email
  form if needed.
  [maurits]


2.1.2 (8 July 2008)
-------------------

- Changed wording in some places.
  [maurits]


2.1.1 (4 July 2008)
-------------------
