@@ -2,7 +2,7 @@
       lang="en-US"
       i18n:domain="minaraad">
     <metal:block use-macro="context/global_defines/macros/defines" />
-    
+
     <body>
     <metal:block metal:define-macro="body"
                  tal:define="view nocall:context/@@attendees_view;
@@ -22,14 +22,14 @@ string:${context/absolute_url}/@@attendees_view">
                 <div i18n:translate="hearing_registered_label">
                   You are currently subscribed to this hearing.
                 </div>
-                <input class="context unsubscribe" 
-                       type="submit" 
-                       name="form.button.Submit" 
+                <input class="context unsubscribe"
+                       type="submit"
+                       name="form.button.Submit"
                        value="Unsubscribe"
                        i18n:attributes="value label_unsubscribe;" />
 
-                <input type="hidden" 
-                       name="form.submitted" 
+                <input type="hidden"
+                       name="form.submitted"
                        value="unregister" />
             </form>
 
@@ -38,14 +38,14 @@ string:${context/absolute_url}/@@attendees_view">
                 <div i18n:translate="hearing_unregistered_label">
                   You are not currently subscribed to this hearing.
                 </div>
-            <input class="context subscribe" 
-                   type="submit" 
-                   name="form.button.Submit" 
+            <input class="context subscribe"
+                   type="submit"
+                   name="form.button.Submit"
                    value="Subscribe"
                    i18n:attributes="value label_subscribe;" />
 
-            <input type="hidden" 
-                   name="form.submitted" 
+            <input type="hidden"
+                   name="form.submitted"
                    value="register" />
            </form>
         </div>
@@ -59,7 +59,7 @@ string:${context/absolute_url}/@@attendees_view">
                 (MOT)
             </span>
         </div>
-        
+
         <span class="hearingsubheader"
              i18n:translate="label_theme_name">Theme:</span>
         <span tal:replace="python:context.getThemeName()" />
@@ -69,13 +69,13 @@ string:${context/absolute_url}/@@attendees_view">
               tal:condition="context/getGoal">
             Goal:
          </div>
-         
-         <div tal:content="context/getGoal" />
-         
+
+         <div tal:replace="structure context/getGoal" />
+
          <div class="hearingsubheader2"
               tal:condition="context/getLocation">
             <span i18n:translate="Location:"
-                  tal:omit-tag="">Location:</span> 
+                  tal:omit-tag="">Location:</span>
             <span class="normaltext"
                   tal:content="context/getLocation" />
          </div>
@@ -120,7 +120,7 @@ string:${context/absolute_url}/@@attendees_view">
         <!-- Hearing Files -->
 
         <!-- Speakers -->
-        <div tal:condition ="agendaItems" 
+        <div tal:condition ="agendaItems"
              class="hearingsubheader2"
              i18n:translate="label_agendaitems">Agenda items</div>
 
@@ -132,18 +132,18 @@ string:${context/absolute_url}/@@attendees_view">
                     <span tal:replace="obj/summary" />
                     <br />
                 </div>
-                <b><div tal:condition="agendaItem/Title" 
+                <b><div tal:condition="agendaItem/Title"
                      tal:replace="agendaItem/Title" /></b>
                 <br />
 
-                <div tal:condition="obj/speaker"> 
+                <div tal:condition="obj/speaker">
                     <span class="hearingsubheader2"
                           i18n:translate="label_speaker">Speaker:</span>
                     <span tal:replace="obj/speaker" />,
                     <span tal:replace="obj/organisation" />
                 </div>
                 <!-- Date and Time -->
-                <div metal:use-macro="context/mina_showdatetime/macros/datetime_agenda" 
+                <div metal:use-macro="context/mina_showdatetime/macros/datetime_agenda"
                      tal:omit-tag="" />
                 <!-- end Date and Time -->
                 <br />
@@ -162,19 +162,19 @@ string:${context/absolute_url}/@@attendees_view">
             <div i18n:translate="moreinfo_contactperson">
                 For more information contact:
             </div>
-            
+
             <tal:block tal:repeat="contact contacts">
                 <div metal:use-macro="context/contactperson_view/macros/contactdetails"
                      tal:omit-tag="" />
             </tal:block>
             <br />
             <br />
-        </tal:block>        
+        </tal:block>
         <!-- end contactpersoon -->
 
         <tal:block tal:define="attendees view/groupedAttendees;
                                attended_members attendees/members;
-                               attended_c_members attendees/council_members" 
+                               attended_c_members attendees/council_members"
                    tal:condition="python:attended_members != [] or attended_c_members != []">
 
         <fieldset tal:condition="python:checkPermission('Manage portal', here)">
@@ -186,7 +186,7 @@ string:${context/absolute_url}/@@attendees_view">
                 <dd tal:repeat="attendee attended_c_members">
                     <span tal:replace="attendee/niceName" />
                 </dd>
-                <dd tal:condition="not:attended_c_members" 
+                <dd tal:condition="not:attended_c_members"
                     class="discreet"
                     i18n:translate="no_attendees">
                 (none currently)
@@ -197,7 +197,7 @@ string:${context/absolute_url}/@@attendees_view">
                 <dd tal:repeat="attendee attended_members">
                     <span tal:replace="attendee/niceName" />
                 </dd>
-                <dd tal:condition="not:attended_members" 
+                <dd tal:condition="not:attended_members"
                     class="discreet"
                     i18n:translate="no_attendees">
                 (none currently)
@@ -205,14 +205,14 @@ string:${context/absolute_url}/@@attendees_view">
             </dl>
              <form tal:condition="python:checkPermission('Manage portal', here)"
                   tal:attributes="action string:${context/absolute_url}/@@attendees_view">
-            <input class="context" 
-                   type="submit" 
-                   name="form.button.Submit" 
+            <input class="context"
+                   type="submit"
+                   name="form.button.Submit"
                    value="Export CSV"
                    i18n:attributes="value label_exportcsv;" />
 
-            <input type="hidden" 
-                   name="form.submitted" 
+            <input type="hidden"
+                   name="form.submitted"
                    value="exportCSV" />
            </form>
         </fieldset>
